k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-frontend
  labels:
    app: forum-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forum-frontend
  template:
    metadata:
      labels:
        app: forum-frontend
    spec:
      containers:
        - name: forum-frontend
          image: molax2/forum-frontend:latest
          ports:
            - containerPort: 80
