k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: NodePort
  selector:
    app: forum-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30080
